Fixed bug #41372 (Internal pointer of source array resets during array copying) Fixed bug #37715 (array pointers resetting on copy)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@240279 c90b9560-bf6c-de11-be94-00142212c4b1